--- a/src/stylesheets/hero.css
+++ b/src/stylesheets/hero.css
@@ -4,13 +4,12 @@
   font-family: "Inter", sans-serif;
 }
 
-
 .ted-link {
   color: black;
-  text-transform: uppercase; 
+  text-transform: uppercase;
   color: red;
-   font-weight: bold;
-    text-decoration: none;
+  font-weight: bold;
+  text-decoration: none;
 
   transition: all 0.2s;
   padding-right: 20px;
@@ -28,27 +27,26 @@
   background: rgb(255, 255, 255);
   /* transform: translateY(-100px); */
   padding: 10px;
-  margin-right: 15px ;
+  margin-right: 15px;
 }
 
-
-@keyframes slideInLeft {
+/* @keyframes slideInLeft {
   0% {
     transform: translateX(-100%);
   }
   100% {
     transform: translateX(0);
   }
-}
+} */
 
-@keyframes slideInBottom {
+/* @keyframes slideInBottom {
   0% {
     transform: translateY(-100%);
   }
   100% {
     transform: translateY(0);
   }
-}
+} */
 
 .main-sect h1,
 .main-sect h5 {
@@ -60,17 +58,25 @@
 }
 
 #hero {
-  background:  linear-gradient(to right, rgba(0, 0, 0, 0.511), rgba(0, 0, 0, 0.533)), url("/src/images/bgee.png");
+  background: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.511),
+      rgba(0, 0, 0, 0.533)
+    ),
+    url("/src/images/bgee.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 200vh;
   /* background-size: 600% 100%; */
   animation: gradient 200s linear infinite;
-  
 }
 @keyframes gradient {
-  0% {background-position: 0%}
-  100% {background-position: 100%}
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 100%;
+  }
 }
 
 @media screen and (max-width: 2560px) and (min-width: 1920px) {
@@ -120,17 +126,11 @@
   }
 }
 
-.speakers .st-subtext
-{
-
+.speakers .st-subtext {
   margin-bottom: 40px;
 }
 @media screen and (min-width: 700px) {
   .speakers .st-subtext {
-  max-width: 70%;
-
-
+    max-width: 70%;
   }
 }
-
-
